# zeta

./: .gitignore  Cargo.toml  LICENSE  README.md  main  main.ll  main.py
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
cli/src/commands/: help.rs  mod.rs  unknown.rs
compiler/: Cargo.toml  README.md
compiler/src/: builder.rs  compiler.rs  lib.rs  maintest.rs  rustcompiler.rs
docs/: BuildInstructions.md  Howtocontribute.md
examples/: main.trq
gccjit/src/: block.rs  context.rs  lvalue.rs  types.rs
lexer/: Cargo.toml
lexer/src/: errors.rs  lib.rs  ops.rs  parser.rs  tokenizer.rs  types.rs
src/: errors.rs  main.rs  utils.rs
src/commands/: help.rs  mod.rs  unkown.rs
src/lexer/: mod.rs  operations.rs  parser.rs  tokenizer.rs  types.rs
torq-llvm/: Cargo.toml  README.md
torq-llvm copy/src/core/: context.rs  module.rs  types.rs
torq-llvm copy/src/execution_engine/: execution_engine.rs  memory_manager.rs
torq-llvm/src/: lib.rs
torq_llvm/: Cargo.toml
torq_llvm/src/: lib.rs
zeta_gcc/: Cargo.toml
zeta_gcc/src/: globalvals.rs  lib.rs
zeta_llvm/: Cargo.toml  README.md
zeta_llvm/src/: functions.rs
zeta_llvm/src/core/: basic_block.rs  builder.rs  pass_manager.rs  value.rs
zeta_llvm/src/execution_engine/: generic_value.rs
zeta_llvm/src/support/: mod.rs
zeta_llvm/wrappers/: CMakeLists.txt
