[package]
name = "torqc"
version = "0.1.0"
authors = ["Varun Potti <potti.varun07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Util libs
tokio = { version = "1.5.0", features = ["full"] }
lazy_static = "1.4.0"
anyhow="1.0.41"
async-trait="0.1.50"
regex = "0.1"
regex-macro = "0.1.1"

# Terminal Libs
console="0.14.1"
colored = "2.0.0"
ansi_term = "0.12.1"
itertools="0.10.1"
# Comments
no-comment = "0.0.3"
