[package]
name = "zetac"
version = "0.1.0"
authors = ["Varun Potti <potti.varun07@gmail.com>", "Carter Snook <cartersnook04@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.41"
async-trait = "0.1.50"
colored = "2.0.0"
console = "0.14.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
no-comment = "0.0.3"
tokio = { version = "1.5.0", features = ["full"] }
lexer = { path = "../lexer" }
compiler = { path = "../compiler" }

llvm-sys = "120.0.0"